# mamba-error-reporting

./: README.md  analysis-dev.ipynb  environment.yml  examples.ipynb  install-mamba-latest.sh  pyproject.toml  setup.py  solver-error.ipynb
src/mamba_error_reporting/: __init__.py  algorithm.py  analysis.py  color.py  messaging.py  plot.py  problems.py  utils.py
