[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mamba_error_reporting"
description = "Proof of concept for better reporting in Mamba"
version = "0.0.1"
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[tool.black]
line-length = 110
